# portfolio_opt

./: .env.example  .gitignore  AGENTS.md  README.md  context.json  cvxportfolio_exampletutorial.ipynb  generate_tickers_test_nb.ipynb  plot_comparison.py  pyproject.toml  run_heatmap.py  run_vol_window_sweep.py  setup.py
docs/: CVXPORTFOLIO_PLAN.md  IMPLEMENTATION.md
examples/: broad_universe.json  custom_best_preset.json  cvxportfolio_best_preset.json  cvxportfolio_broad_high_equity_preset.json  cvxportfolio_spy_benchmark_preset.json  cvxportfolio_spy_core_preset.json  cvxportfolio_vol_target_preset.json  early_universe.json  ftse100_universe.json  ftse100_universe_202307.json  global_universe.json  nasdaq100_historical_universe.json  nasdaq100_sector_universe_b2016filtered.json  nasdaq100_sp500_sector_universe.json  nasdaq100_sp500_sector_universe_b2016filtered.json  nasdaq100_truncated_universe.json  nasdaq100_universe.json  nikkei225_current_backtest_valid_universe.json  nikkei225_current_universe.json  sample_model.json  sample_universe.json  sector_country_universe.json  sector_plus_bonds.json  sector_universe.json  sector_universe_pre2016.json  sector_universe_pre2016_nomax.json  sector_universe_pre2020.json  sp500_20160104_universe.json  yfiua_csi1000_202402_current_valid_universe.json  yfiua_csi1000_202402_universe.json  yfiua_csi1000_current_universe.json  yfiua_csi300_202307_current_valid_universe.json  yfiua_csi300_202307_universe.json  yfiua_csi300_202402_universe.json  yfiua_csi300_current_universe.json  yfiua_csi500_202402_current_valid_universe.json  yfiua_csi500_202402_universe.json  yfiua_csi500_current_universe.json  yfiua_csi_combined_202402_current_valid_with_benchmarks_universe.json  yfiua_csi_combined_202402_universe.json  (+27 more)
rust-portfolio/: Cargo.toml
rust-portfolio/src/: main.rs
rust-portfolio/src/portfolio_opt/: alpaca.rs  backtest.rs  cli.rs  config.rs  mod.rs  rebalance.rs  types.rs
src/: fetch_nasdaq100_tickers.py
src/cvxportfolio_impl/: README.md  __init__.py  backtest.py  cli.py  data.py  policy.py
src/portfolio_opt/: 20260420log.txt  __init__.py  alpaca.py  alpaca_interface.py  backtest.py  black_litterman.py  cache.py  cli.py  config.py  csv_data.py  estimation.py  execution.py  market_data.py  model.py  optimizer.py  plot.py  rebalance.py  risk_parity.py  runtime.py  stockanalysis_data.py  types.py  yfinance_data.py
src/utils/: combine_universes.py  fetch_tickers.py  generate_historical_sp500_example.py  generate_nikkei_examples.py  generate_yfiua_examples.py
tests/: test_csv_data.py  test_cvxportfolio_reporting.py  test_dual_momentum.py  test_fetch_tickers.py  test_market_data.py  test_portfolio_opt_core.py  test_runtime.py  test_stockanalysis_data.py  test_yfinance_data.py
tools/: add_asset_class_to_ticker_info_cache_once.py  canonicalize_universe_asset_classes_once.py
