[build-system]
requires = [
  "setuptools>=68",
  "mypy>=1.20",
  "numpy>=1.26",
  "cvxpy>=1.4",
  "python-dotenv>=1.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-opt"
version = "0.1.0"
description = "Minimal cvxpy-based portfolio optimizer with Alpaca integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alpaca-py>=0.43.2",
  "clarabel>=0.11.1",
  "cvxportfolio>=1.5.0",
  "cvxpy>=1.4",
  "exchange-calendars>=4.13.2",
  "ipykernel>=7.2.0",
  "jupyter>=1.1.1",
  "matplotlib>=3.7",
  "numpy>=1.26",
  "pandas>=2.2",
  "python-dotenv>=1.0",
  "requests>=2.33.1",
  "seaborn>=0.13.2",
  "yfinance>=1.2.1",
]

[project.scripts]
portfolio-opt = "portfolio_opt.cli:main"
cvxportfolio-backtest = "cvxportfolio_impl.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ty.environment]
python = ".venv/bin/python"

[tool.ty.src]
include = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.20",
    "pytest>=9.0.2",
]
