[package]
name = "rust-portfolio"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ndarray = { version = "0.17", features = ["serde"] }
ndarray-stats = "0.7"
plotters = "0.3"
dotenv = "0.15"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
apca = "0.30"
num-decimal = { version = "0.2", default-features = false, features = ["num-v04"] }
yfinance-rs = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
